texascale-org/GL-32: Narrow screen overflow fixes

--- a/texascale-org/static/texascale-org/css/src/page.frontera-secret-sauce.css
+++ b/texascale-org/static/texascale-org/css/src/page.frontera-secret-sauce.css
@@ -52,14 +52,9 @@ COMPONENTS: Image Map: Structure
     --line-height: 1.5; /* from Bootstrap on `body` */
 
     max-height: calc(1em * var(--max-lines) * var(--line-height));
+  }
+  .c-image-map__item .c-image-map__item-desc {
     overflow: hidden;
-  }
-  .c-image-map__item:hover .c-image-map__item-desc {
-    overflow: scroll;
-  }
-  /* When hovering/touched, expand height of description */
-  .c-image-map__item:hover {
-    flex-basis: 50%;
   }
 }
 /* On wide viewport, limit height dynamically and scroll overflow */
